<resources>
    <string name="app_name">inksy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="NumberText">By Continuing you may receive an SMS for verification. Message and data rated may apply.</string>
    <string name="EmptryNumberError">Mobile Number cannot be empty</string>
    <string name="NumberValidError">Number is Not Valid</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="ErrorEmail">Email Address cannot be empty</string>
    <string name="ErrorPassword">Password cannot be empty</string>
    <string name="visible">visible</string>
    <string name="nonvisible">nonVisible</string>
    <string name="your_name">Your Name</string>
    <string name="lets_go">Lets Go</string>
    <string name="my_journals">My Journals</string>
    <string name="more">More</string>
    <string name="doodle_store">Doodle Store</string>
    <string name="artist_panel">Artist Panel</string>
    <string name="more_information">More Information</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log Out</string>
    <string name="support">Support</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="journal">Journal</string>
    <string name="people">People</string>
    <string name="approved_art">Approved Art</string>
    <string name="others">Others</string>
    <string name="about_us">About Us</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="amount_received">Amount Received</string>
    <string name="payment_method">Payment Method</string>
    <string name="create">Create</string>
    <string name="select_template">Select Template</string>
    <string name="select_borderColor">Select Color</string>
    <string name="single_page">Single Page</string>
    <string name="select_category">Select Category</string>
    <string name="creator_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="lets_get_started_with">Lets get started with</string>
    <string name="search">Search</string>
    <string name="see_all">See All</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="notifications">Notifications</string>
    <string name="subject">Subject</string>
    <string name="next">Next</string>
    <string name="daily_exercise">Daily Exercise</string>
    <string name="select_audience">Select Audience</string>
    <string name="save">Save</string>
    <string name="termsandconditionartist">By clicking "I am in" you agree to the following <b>Terms and Conditions</b> without reservation</string>
    <string name="lorem_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="welcome">Welcome to the</string>
    <string name="ArtistPanel">Artist Panel</string>
    <string name="ArtSection">Art Section</string>
    <string name="statusofyoursubmittedart">Status of Your Submitted Art</string>
    <string name="store">Store</string>
    <string name="purchase">Purchased</string>
    <string name="search_result">Search Result</string>
    <string name="all">All</string>
    <string name="bioError">Bio cannot be empty</string>
    <string name="messageError">Message cannot be empty</string>
    <string name="Done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="privacy">Privacy</string>
    <string name="change_password">Change Password</string>
    <string name="digit_code">\"Enter the 6-digit code sent to you at \"</string>
    <string name="resend_code">\"Resend Code in \"</string>
    <string name="resend_code_">Resend Code</string>
    <string name="emailError">Email Address cannot be empty</string>
    <string name="emailError2">Email Address is not valid.</string>
    <string name="logout">Are you sure, you want to logout?</string>
    <string name="collaborate_with_us">Collaborate with us</string>
    <string name="manage_payment_method">Manage Payment Method</string>
    <string name="i_am_in">I am in</string>
    <string name="doodle_drawing">Doodle Drawing</string>
    <string name="pack_title">Pack Title</string>
    <string name="recently_updated">Recently Updated</string>
    <string name="art_work">Artwork</string>
    <string name="title">Title</string>
    <string name="add_bullets">Add Bullets</string>
    <string name="title_text">Title Text :</string>
    <string name="bullet_text">Bullet Text :</string>
    <string name="choose_action">Choose Action</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="lightning_bolt_does_not_match_community_standards">Lightning bolt does not match community standards</string>
    <string name="featured">Featured</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="tell_us_something">Tell us something</string>
    <string name="about_yourself">about yourself</string>
    <string name="my_chats">My Chats</string>
    <string name="comment_section">Comment Section</string>
    <string name="choose_border_color">Choose Border Color</string>
    <string name="choose_background_n_from_templates">Choose Background \n from Templates</string>
    <string name="artist_writeup">Are you sure you wants to go in as an artist ?</string>
    <string name="iamsure">I am Sure</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="tell_us_something_about_yourself">Tell us something about yourself</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="people_i_am_following">People I am following</string>
    <string name="list_error">List cannot be empty</string>
    <string name="confimpassworderror">Password must be same</string>
</resources>