<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_marginHorizontal="@dimen/_28sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_action"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/line_grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/cameraLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@android:drawable/ic_menu_camera"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/camera"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:padding="10dp"
                        android:fontFamily="@font/sfmedium"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_grey"/>

                <LinearLayout
                    android:id="@+id/galleryLayout"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@android:drawable/ic_menu_gallery"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery"
                        android:fontFamily="@font/sfmedium"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:padding="10dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>