<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Activities.Contact_Form">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_marginTop="@dimen/_16sdp"
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_leftside"
            android:fontFamily="@font/sfbold"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            android:textSize="@dimen/_25sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_leftside"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:hint="@string/subject"
            android:singleLine="true"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/appBlue"
            app:hintTextColor="@color/appBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sflight"
                android:inputType="textPersonName|textCapWords"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_leftside"
            android:layout_marginEnd="@dimen/_32sdp"
            android:background="@drawable/round_border_edittext"
            android:gravity="start"
            android:hint="Your message"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameError" />

        <TextView
            android:id="@+id/nameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="Subject cannot be empty"
            android:textColor="@color/red_color_picker"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <Button
            android:layout_marginTop="@dimen/_45sdp"
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/lets_go"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/summary"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/summary"
            app:layout_constraintTop_toBottomOf="@+id/summary"
            app:layout_constraintVertical_bias="0.278" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>