<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".UI.Fragments.Login">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_leftside"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/bluelogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_leftside"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sflight"
                android:text="Setup Your"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_leftside"
                android:fontFamily="@font/sfbold"
                android:text="Email &amp; Password"
                android:textColor="@color/appBlue"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text1" />


            <TextView
                android:id="@+id/emailError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/emailError"
                android:textColor="@color/red_color_picker"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/edtName"
                app:layout_constraintTop_toBottomOf="@+id/edtName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_leftside"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:hint="@string/email_address"
                android:singleLine="true"
                app:boxStrokeColor="@color/appBlue"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/appBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfmedium"
                    android:inputType="textEmailAddress|textCapWords"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_leftside"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:hint="@string/enter_password"
                android:singleLine="true"
                app:boxStrokeColor="@color/appBlue"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/appBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailError"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfmedium"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/password_cannot_be_empty"
                android:textColor="@color/red_color_picker"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/edtName"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_45sdp"
                android:background="@drawable/button"
                android:text="Continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintVertical_bias="0.255" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>